--- a/YumBlazor/Properties/launchSettings.json
+++ b/YumBlazor/Properties/launchSettings.json
@@ -1,11 +1,11 @@
 {
-  "$schema": "http://json.schemastore.org/launchsettings.json",
+  "$schema": "https://json.schemastore.org/launchsettings.json",
     "iisSettings": {
       "windowsAuthentication": false,
       "anonymousAuthentication": true,
       "iisExpress": {
-        "applicationUrl": "http://localhost:6645",
-        "sslPort": 44309
+        "applicationUrl": "http://localhost:9716",
+        "sslPort": 44367
       }
     },
     "profiles": {
@@ -13,7 +13,7 @@
         "commandName": "Project",
         "dotnetRunMessages": true,
         "launchBrowser": true,
-        "applicationUrl": "http://localhost:5022",
+        "applicationUrl": "http://localhost:5035",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
@@ -22,7 +22,7 @@
         "commandName": "Project",
         "dotnetRunMessages": true,
         "launchBrowser": true,
-        "applicationUrl": "https://localhost:7273;http://localhost:5022",
+        "applicationUrl": "https://localhost:7050;http://localhost:5035",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
