--- a/YumBlazor/YumBlazor.csproj
+++ b/YumBlazor/YumBlazor.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.0-preview.3.24172.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0-preview.3.24172.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0-preview.3.24172.4" />
+    <PackageReference Include="Radzen.Blazor" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
